[Optimeze][pom] maven package Model optimeze (#1205)
* maven模块优化

* pom

* maven模块优化

* 添加jdk11自适应

* 添加jdk11自适应

* 添加jdk11自适应

* 添加jdk11自适应

* 添加jdk11自适应

* 添加jdk11自适应