@@ -49,16 +49,20 @@
     </modules>
 
     <properties>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <target.java.version>1.8</target.java.version>
+        <maven.compiler.source>${target.java.version}</maven.compiler.source>
+        <maven.compiler.target>${target.java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
         <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
-
-        <spring-boot-dependencies.version>2.6.3</spring-boot-dependencies.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <scala.version>2.12.10</scala.version>
+        <!--  `provided` for product environment ,`compile` for dev environment  -->
+        <scope.runtime>provided</scope.runtime>
+        <dlink.flink.version>1.14</dlink.flink.version>
+        <spring-boot-dependencies.version>2.6.12</spring-boot-dependencies.version>
         <hutool.version>5.8.4</hutool.version>
         <druid-starter>1.2.8</druid-starter>
         <mybatis-plus-boot-starter.version>3.5.1</mybatis-plus-boot-starter.version>
@@ -78,11 +82,6 @@
         <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
         <maven.resource.version>3.2.0</maven.resource.version>
         <junit.version>4.12</junit.version>
-        <!--  `provided` for product environment ,`compile` for dev environment  -->
-        <scope.runtime>provided</scope.runtime>
-        <!--  modify flink version  -->
-        <dlink.flink.version>1.14</dlink.flink.version>
-        <scala.binary.version>2.11</scala.binary.version>
         <protobuf-java.version>2.5.0</protobuf-java.version>
         <jedis.version>2.9.0</jedis.version>
         <javax.mail>1.6.2</javax.mail>
@@ -476,10 +475,10 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                        <testSource>${java.version}</testSource>
-                        <testTarget>${java.version}</testTarget>
+                        <source>${target.java.version}</source>
+                        <target>${target.java.version}</target>
+                        <testSource>${target.java.version}</testSource>
+                        <testTarget>${target.java.version}</testTarget>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -597,4 +596,227 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <url>https://maven.aliyun.com/repository/central</url>
+        </repository>
+        <repository>
+            <id>maven-central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>dev</name>
+                </property>
+            </activation>
+            <properties>
+                <!--  `provided` for product environment ,`compile` for dev environment  -->
+                <scope.runtime>compile</scope.runtime>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>prod</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>prod</name>
+                </property>
+            </activation>
+            <properties>
+                <!--  `provided` for product environment ,`compile` for dev environment  -->
+                <scope.runtime>provided</scope.runtime>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>scala-2.11</id>
+            <activation>
+                <property>
+                    <name>scala-2.11</name>
+                </property>
+            </activation>
+            <properties>
+                <scala.binary.version>2.11</scala.binary.version>
+                <scala.version>2.11.7</scala.version>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>scala-2.12</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>scala-2.12</name>
+                    <value>flink-1.15</value>
+                </property>
+            </activation>
+            <properties>
+                <scala.binary.version>2.12</scala.binary.version>
+                <scala.version>2.12.10</scala.version>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>flink-1.11</id>
+            <activation>
+                <property>
+                    <name>flink-1.11</name>
+                </property>
+            </activation>
+            <properties>
+                <!--  modify flink version  -->
+                <dlink.flink.version>1.11</dlink.flink.version>
+                <flink.version>1.11.6</flink.version>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>flink-1.12</id>
+            <activation>
+                <property>
+                    <name>flink-1.12</name>
+                </property>
+            </activation>
+            <properties>
+                <!--  modify flink version  -->
+                <dlink.flink.version>1.12</dlink.flink.version>
+                <flink.version>1.12.7</flink.version>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>flink-1.13</id>
+            <activation>
+                <property>
+                    <name>flink-1.13</name>
+                </property>
+            </activation>
+            <properties>
+                <!--  modify flink version  -->
+                <dlink.flink.version>1.13</dlink.flink.version>
+                <flink.version>1.13.6</flink.version>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>flink-1.14</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>flink-1.14</name>
+                </property>
+            </activation>
+            <properties>
+                <!--  modify flink version  -->
+                <dlink.flink.version>1.14</dlink.flink.version>
+                <flink.version>1.14.6</flink.version>
+                <flinkcdc.version>2.2.1</flinkcdc.version>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>flink-1.15</id>
+            <activation>
+                <property>
+                    <name>flink-1.15</name>
+                </property>
+            </activation>
+            <properties>
+                <!--  modify flink version  -->
+                <dlink.flink.version>1.15</dlink.flink.version>
+                <flink.version>1.15.2</flink.version>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>jdk11</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>build-helper-maven-plugin</artifactId>
+                            <version>1.7</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-shade-plugin</artifactId>
+                        </plugin>
+                        <plugin>
+                            <groupId>com.github.siom79.japicmp</groupId>
+                            <artifactId>japicmp-maven-plugin</artifactId>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>javax.xml.bind</groupId>
+                                    <artifactId>jaxb-api</artifactId>
+                                    <version>2.3.0</version>
+                                </dependency>
+                                <dependency>
+                                    <groupId>com.sun.xml.bind</groupId>
+                                    <artifactId>jaxb-impl</artifactId>
+                                    <version>2.3.0</version>
+                                </dependency>
+                                <dependency>
+                                    <groupId>com.sun.xml.bind</groupId>
+                                    <artifactId>jaxb-core</artifactId>
+                                    <version>2.3.0</version>
+                                </dependency>
+                                <dependency>
+                                    <groupId>javax.activation</groupId>
+                                    <artifactId>activation</artifactId>
+                                    <version>1.1.1</version>
+                                </dependency>
+                            </dependencies>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <excludedGroups>org.apache.flink.testutils.junit.FailsOnJava11</excludedGroups>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <configuration>
+                                <additionalJOptions>
+                                    <additionalJOption>--add-exports=java.base/sun.net.util=ALL-UNNAMED</additionalJOption>
+                                </additionalJOptions>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>11</source>
+                            <target>11</target>
+                            <compilerArgs combine.children="append">
+                                <arg>--add-exports=java.base/sun.net.util=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+    </profiles>
 </project>
